confession/1011895
Cookie Consent by _F_r_e_e_ _P_r_i_v_a_c_y_ _P_o_l_i_c_y_ _w_e_b_s_i_t_e
[Navigační _R_E_G_I_S_T_R_A_C_E [Navigační _T_A_B_L_O [Navigační _S_T_A_T_I_S_T_I_K_A [Navigační _SS_OO_UU_TT_?Ě_?Ž_EE [Navigační _P_O_M_O_Z_T_E [Navigační _R_E_K_L_A_M_A [Navigační _K_O_N_T_A_K_T [Navigační
    lišta]            lišta]           lišta]                lišta]             lišta]             lišta]             lišta]             lišta]
[Navigační lišta]
                            [Horní lišta bez menu]
                            _[_L_o_g_o_ _Z_p_o_v_ě_d_n_i_c_e_]
               [Dolní lišta]   [Dolní lišta]       [Dolní lišta]
               [Nabídka voleb] [Dolní lišta voleb]
   Otázky - Vzkazy č.1011895, vloženo _[_S_t_a_r_š_í_ _z_p_o_v_ě_ď_]_[_N_o_v_ě_j_š_í_ _z_p_o_v_ě_ď_]_[_H_l_a_v_n_í
   03.08.2017 11:41:24                _s_t_r_á_n_k_a_]
   Pomoc s Pythonom HAPL! :(
   pokúšam sa ukončiť lekciu na Code Academy, ale nejde mi to :(

   Vedel by niekto vyriešiť toto: http://imgur.co m/a/wtgPy

   Skúsil som

   def the_flying_circus(answer):
   if (answer > 5) and (1 == 1):
   return False
   print "Hail Hydra"
   elif (answer < 5) and (1 == 1) :
   return False
   print "Shield for the win!"
   else:
   return True
   print "I prefer DC"

   Nefunguje! Píše "File "python", line 11
   else:
   ^
   SyntaxError: invalid syntax"

   Nechápem :'(

   Chcú po mne 20 USD aby som si zistil odpoveď. Hajzli!
    Monty Python [Muž]29  _V_Y_M_A_Z_A_T

Zaslaná rozhřešení _[_S_t_a_r_š_í_ _z_p_o_v_ě_ď_]_[_N_o_v_ě_j_š_í_ _z_p_o_v_ě_ď_]_[_H_l_a_v_n_í_ _s_t_r_á_n_k_a_]
Chceš dnes udělat dobrý skutek ? Pomoz výše uvedenému hříšníkovi tím, že mu
dáš nějaké rozhřešení! Můžeš mu ho poslat na e-mailovou adresu, kterou uvedl u
zpovědi, nebo napsat veřejně vyplněním formuláře na konci této stránky. A
jestliže nechceš, aby pod tvou přezdívkou mohl vystupovat ještě někdo jiný,
zaregistruj si ji _Z_D_E !
 
03.08.2017 13:26:41
MrFlibble - na tie podmienky vôbec nepozeraj, proste som tam dal pravdivý a
nepravdivý výrok.

Aha, to odsadenie by ma iste nenapadlo.

Myslel som že retrun funkcie je proste command rovnako ako print, nastaví
hodnotu premennej na 0 alebo 1 a je jedno na poradí príkazov... môžem to tam
dať ale nemusím...
 Monty Python
03.08.2017 12:30:30
V Pythonu záleží na odsazení (proto ho nemám rád). Tipuju že print nemáš na
stejné úrovni jako return. Navíc maš print až za returnem, což je blbost. A ty
podmínky 5==5 mají být jakože co?
 _M_r_F_l_i_b_b_l_e [Muž]25 [Kategorie]
03.08.2017 11:47:30
Takže správne riešenie je toto:

def the_flying_circus():

if 2**3 >= 6 and 10 != 2 :
return True



elif 4 > 5 or 5 == 5 :
return False

else:
return True



AKÝ JE V TOM KUWA ROZDIEL???
 Monty Python

                                   _[_3_ _z_a_ _2_]

 Přidání rozhřešení _[_S_t_a_r_š_í_ _z_p_o_v_ě_ď_]_[_N_o_v_ě_j_š_í_ _z_p_o_v_ě_ď_]_[_H_l_a_v_n_í_ _s_t_r_á_n_k_a_]
 TVÁ PŘEZDÍVKA:
 [jmenko              ]       _TT_ee_nn_tt_oo_ _ii_nn_zz_ee_rr_aa_tt_ _kk_oo_uu_pp_?í_tt_ee_ _oo_nn_--_ll_ii_nn_ee_ _oo_dd_ _11_00_00_ _KK_?č_..
 OPIŠ BEZPEČNOSTNÍ KOD:       _P_ř_i_d_e_j_ _i_n_z_e_r_á_t_ _o_n_-_l_i_n_e_ _o_d_ _1_0_0_ _K_č
 [Captcha]
 [code                ]

 PŘILOŽ SMAILÍKA:
 _[_S_m_a_i_l  _[_S_m_a_i_l   _[_S_m_a_i_l _[_S_m_a_i_l    _[_S_m_a_i_l   _[_S_m_a_i_l  _[_S_m_a_i_l   _[_S_m_a_i_l _[_S_m_a_i_l
 _P_a_l_e_c   _H_r_o_z_í_c_í_] _D_r_ž_í   _N_e_n_í_ _t_o   _D_o_s_t_a_n_e_š _S_m_u_t_n_ý_] _C_o_ž_e_?_?_]  _S_a_f_r_a_] _P_u_s_i_n_k_a_]
 _n_a_h_o_r_u_]          _p_a_l_e_c_] _d_ů_l_e_ž_i_t_é_] _d_o_ _h_u_b_y_]
 ojupííí otak     održím oto je    otumáááš oach jo ono nééé osafra ommmuc
         bacha    palec  fuk                        ?!
 (#žádný )

 [Odeslat rozh???e???en???]

 NNeejjlleepp?š?í cchhoorr?álloovv?á sskkuuppiinnaa ssvv?ěttaa...... _GG_RR_EE_GG_OO_RR_II_AA_NN_ _22_00_22_00 ......2200tthh AANNNNIIVVEERRSSAARRYY WWOORRLLDD
                                    TTOOUURR..

 REKLAMA
 Copyright 2003 www.zpovednice.cz + www.spovednica.sk



